Fixed site footer social icons shifting to the side on tiny screens.

--- a/src/styles/modules/_list.scss
+++ b/src/styles/modules/_list.scss
@@ -62,6 +62,18 @@
     }
   }
 
+  @include forTiny {
+    &--horizontal--less-space--for-tiny {
+      &>li {
+        /*spacing*/
+        padding-left: 10px;
+        padding-right: 10px;
+        /*display*/
+        display: inline-block;
+      }
+    }
+  }
+
   &--no-right-space-on-last {
     &>li:last-child {
       padding-right: 0;
@@ -73,6 +85,15 @@
     &>li:first-child {
       padding-left: 0;
       margin-right: 0;
+    }
+  }
+
+  @include atSmall {
+    &--no-left-space-on-first--at-small {
+      &>li:first-child {
+        padding-left: 0;
+        margin-right: 0;
+      }
     }
   }
 
